# OpenFoundry

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  Makefile  NOTEBOOK_API.md  README.md  docker-compose.yml  index.html  notebook_runner.py  package-lock.json  package.json  pyproject.toml  sitemap.xml
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 202507020116-a7c34f893c6d_add_conversation_items_table.py  202507041823-12a595ea79d0_add_app_port_to_appagentsession_table.py  2025_07_06_2212-df38390f96e2_soft_delete_app.py  2025_07_06_2335-7db5502e64ac_add_snowflake_connection.py  2025_07_07_1930-6b9a318d2664_add_deployment_port_to_app_table.py  2025_07_08_2115-0decfa45263f_add_app_connection_join_table.py  2025_07_11_0016-6ff15a95dc62_add_databricks_connection.py  2025_07_11_0359-4aad813baecb_add_databricks_connection.py  2025_07_12_0041-f2007e1fd995_app_connections_table.py  2025_07_15_1451-33953b146e64_add_clickhouse_connection.py  2025_07_16_2205-01f142e6cc0a_add_postgres_connection_table.py  2025_07_16_2300-3fcbda9ed259_add_bigquery_connection.py  2025_07_17_1840-09efaa1dc2b_add_notebooks_and_notebook_agent_sessions.py  9348104db61d_add_agent_session_app_agent_session_and_.py
assets/css/: styles.968cb68e.css
assets/js/: 1df93b7f.84f8be96.js  1df93b7f.c8946234.js  44a435b1.d82406a3.js  7afa52e9.3237e42a.js  943d85ca.d4288757.js  b9fde445.71959eca.js  c08af1ea.c8a8ed6d.js  c7ead4ab.dcfe14a0.js  cc7d9f7f.6090ccad.js  d66d20fb.3f179e54.js  main.a1405e7d.js  runtime~main.b3055112.js  runtime~main.c6588cb3.js
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/Welcome/: index.html
docs/category/tutorial---apps/: index.html
docs/category/tutorial---data-connections/: index.html
docs/category/tutorial---notebooks/: index.html
docs/docs/: Welcome.md
docs/docs/tutorial-apps/: _category_.json  create-a-streamlit-app.md
docs/docs/tutorial-data-connections/: _category_.json  create-a-data-connection.md
docs/docs/tutorial-notebooks/: _category_.json  create-a-notebook.md
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
docs/tutorial-apps/create-a-streamlit-app/: index.html
docs/tutorial-data-connections/create-a-data-connection/: index.html
docs/tutorial-notebooks/create-a-notebook/: index.html
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/components/: ChatConversation.tsx  Layout.tsx
frontend/src/hooks/: types.ts  useAgentSessionFiles.ts  useAppChat.ts  useBaseChat.ts  useChatHistory.ts  useConnection.ts  useFiles.ts  useKernelStatus.ts  useNotebookCells.ts  useNotebookChat.ts  (+3 more)
openfoundry/: config.py  database.py  logger.py  middleware.py  notebook_types.py  server.py  static.py
openfoundry/agents/: __init__.py  bash_tools.py  common_tools.py  notebook_coding_agent.py  notebook_tools.py  run_context.py  streamlit_app_coding_agent.py
openfoundry/local_agents/: __init__.py  bash_tools.py  common_tools.py  notebook_coding_agent.py  notebook_tools.py  run_context.py  streamlit_app_coding_agent.py
openfoundry/models/: __init__.py  conversation_item.py
openfoundry/routers/: app_api.py  notebook.py  notebook_api.py
sandbox/: Dockerfile  README.md  __init__.py  files_api.py  find_api.py  pcb.py  pcb_api.py  pyproject.toml  sandbox_server.py
sandbox/connections/: __init__.py  connection.py  snowflake_connection.py  utils.py
sandbox/openfoundry_sandbox/: __init__.py  cell_executor.py  config.py  connection_manager.py  connections_api.py  files_api.py  find_api.py  kernel_manager.py  notebook_api.py  notebook_runner.py  notebook_types.py  pcb.py  pcb_api.py  sandbox_server.py  secrets_api.py
sandbox/openfoundry_sandbox/connections/: bigquery_connection.py  clickhouse_connection.py  connection_manager.py  postgres_connection.py  snowflake_connection.py
sandbox/openfoundry_sandbox/models/: __init__.py
sandbox/openfoundry_sandbox/models/connections/: databricks_connection.py  utils.py
shared-types/: pyproject.toml
shared-types/openfoundry_types/: __init__.py  notebook_types.py
(+132 files in other folders)
