[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1",
]

[tool.poetry]
name = "openfoundry-types"
version = "0.1.0"
description = "Shared types for OpenFoundry packages"
authors = ["OpenFoundry AI"]
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.0.0"
